--- a/Work1-2/Work1-2.vcxproj.filters
+++ b/Work1-2/Work1-2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Work1-1.cpp">
+    <ClCompile Include="Work1.2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
